--- a/.config/surf/homepage/home.html
+++ b/.config/surf/homepage/home.html
@@ -10,34 +10,34 @@
         <div class=row>
         <div class=column>
         <p class=header>sites</p>
-        <a href="http://duckduckgo.com/html"><img src="http://www.duckduckgo.com/favicon.ico"></img>duckduckgo</a></br>
-        <a href="https://youtube.com/?hl=fr"><img src="https://www.youtube.com/favicon.ico"></img>youtube</a></br>
-        <a href="https://messenger.com/login.php"><img src="https://static.xx.fbcdn.net/rsrc.php/yg/r/4_vfHVmZ5XD.ico"></img>messenger</a></br> 
-        <a href="https://github.com/Speyll"><img src="https://www.github.com/favicon.ico"></img>github</a></br>
-        <a href="https://soundcloud.com/poolsidefm/sets/poolside-fm-official-playlist"><img src="https://www.soundcloud.com/favicon.ico"></img>soundcloud</a></br>
+        <a href="http://duckduckgo.com/html"><img src="favicon/duckduck.png"></img>duckduckgo</a></br>
+        <a href="https://youtube.com/?hl=fr"><img src="favicon/youtube.png"></img>youtube</a></br>
+        <a href="https://messenger.com/login.php"><img src="favicon/messenger.png"></img>messenger</a></br> 
+        <a href="https://github.com/Speyll"><img src="favicon/github.png"></img>github</a></br>
+        <a href="https://soundcloud.com/poolsidefm/sets/poolside-fm-official-playlist"><img src="favicon/soundcloud.png"></img>soundcloud</a></br>
 
         </div>
         <div class=column>
         <p class=header>boards</p>
-        <a href="https://4chan.org"><img src="https://www.4chan.org/favicon.ico"></img>4chan</a></br>
-        <a href="https://4chan.org/g/"><img src="https://www.4chan.org/favicon.ico"></img>/g/</a></br>
-        <a href="https://4chan.org/wg/"><img src="https://www.4chan.org/favicon.ico"></img>/wg/</a></br>
-        <a href="https://4chan.org/c/"><img src="https://www.4chan.org/favicon.ico"></img>/c/</a></br>
-        <a href="https://4chan.org/v/"><img src="https://www.4chan.org/favicon.ico"></img>/v/</a></br>
+        <a href="https://4chan.org"><img src="favicon/4chan.png"></img>4chan</a></br>
+        <a href="https://4chan.org/g/"><img src="favicon/4chan.png"></img>/g/</a></br>
+        <a href="https://4chan.org/wg/"><img src="favicon/4chan.png"></img>/wg/</a></br>
+        <a href="https://4chan.org/c/"><img src="favicon/4chan.png"></img>/c/</a></br>
+        <a href="https://4chan.org/v/"><img src="favicon/4chan.png"></img>/v/</a></br>
 
         </div>
         <div class=column>
         <p class=header>reddit</p>
-        <a href="https://old.reddit.com"><img src="https://www.reddit.com/favicon.ico"></img>r/home</a></br>
-        <a href="https://old.reddit.com/r/unixporn"><img src="https://www.reddit.com/favicon.ico"></img>r/unixporn</a></br>
-        <a href="https://old.reddit.com/r/4chan"><img src="https://www.reddit.com/favicon.ico"></img>r/4chan</a></br>
-        <a href="https://old.reddit.com/r/linux"><img src="https://www.reddit.com/favicon.ico"></img>r/linux</a></br>
-        <a href="https://old.reddit.com/r/voidlinux"><img src="https://www.reddit.com/favicon.ico"></img>r/void</a></br>
+        <a href="https://old.reddit.com"><img src="favicon/reddit.png"></img>r/home</a></br>
+        <a href="https://old.reddit.com/r/unixporn"><img src="favicon/reddit.png"></img>r/unixporn</a></br>
+        <a href="https://old.reddit.com/r/4chan"><img src="favicon/reddit.png"></img>r/4chan</a></br>
+        <a href="https://old.reddit.com/r/linux"><img src="favicon/reddit.png"></img>r/linux</a></br>
+        <a href="https://old.reddit.com/r/voidlinux"><img src="favicon/reddit.png"></img>r/void</a></br>
 
         </div>
         <div class=column>
         <p class=header>misc</p>
-        <a href="http://txti.es/j7suw"><img src="http://www.txti.es/favicon.ico"></img>misc favs</a></br>
+        <a href="http://txti.es/j7suw"><img src="favicon/voidlinux.png"></img>misc favs</a></br>
         </div>
         </div>
         </div>
