--- a/.config/surf/homepage/home.html
+++ b/.config/surf/homepage/home.html
@@ -37,7 +37,7 @@
         </div>
         <div class=column>
         <p class=header>misc</p>
-        <a href="http://txti.es/j7suw"><img src="favicon/voidlinux.png"></img>misc favs</a></br>
+        <a href="http://txti.es/j7su*"><img src="favicon/voidlinux.png"></img>misc favs</a></br>
         </div>
         </div>
         </div>
